--- a/radix-engine-tests/Cargo.toml
+++ b/radix-engine-tests/Cargo.toml
@@ -11,7 +11,7 @@ radix-engine-interface = { path = "../radix-engine-interface", default-features 
 radix-engine-common = { path = "../radix-engine-common", default-features = false }
 radix-engine-store-interface = { path = "../radix-engine-store-interface", default-features = false }
 radix-engine-stores = { path = "../radix-engine-stores", default-features = false }
-radix-engine-queries = { path = "../radix-engine-queries", default-features = false }
+radix-engine-queries = { path = "../radix-engine-queries", default-features = false, features = ["moka"] }
 transaction = { path = "../transaction", default-features = false }
 utils = { path = "../utils", default-features = false }
 radix-engine-profiling = { path = "../radix-engine-profiling", optional = true, features = ["resource_tracker"]}
