--- a/scrypto-unit/Cargo.toml
+++ b/scrypto-unit/Cargo.toml
@@ -24,8 +24,8 @@ std = ["scrypto/std", "scrypto/serde", "sbor/std", "radix-engine-interface/std",
 alloc = ["scrypto/alloc", "scrypto/serde", "sbor/alloc", "radix-engine-interface/alloc", "radix-engine-stores/alloc", "radix-engine-store-interface/alloc", "radix-engine-queries/alloc", "radix-engine/alloc", "transaction/alloc", "utils/alloc"]
 resource_tracker = []
 
-moka = ["radix-engine/moka"]
-lru = ["radix-engine/lru"]
+moka = ["radix-engine/moka", "radix-engine-queries/moka"]
+lru = ["radix-engine/lru", "radix-engine-queries/lru"]
 
 [lib]
 bench = false
