--- a/transaction-scenarios/Cargo.toml
+++ b/transaction-scenarios/Cargo.toml
@@ -19,7 +19,7 @@ hex = { version = "0.4.3", default-features = false }
 # You should enable either `std` or `alloc`
 default = ["std"]
 std = ["hex/std", "sbor/std", "transaction/std", "radix-engine/std", "radix-engine-stores/std", "radix-engine-interface/std", "radix-engine-store-interface/std", "utils/std"]
-alloc = ["hex/alloc", "sbor/alloc", "transaction/alloc", "radix-engine/alloc", "radix-engine-stores/alloc", "radix-engine-interface/alloc", "radix-engine-store-interface/alloc", "utils/alloc"]
+alloc = ["hex/alloc", "sbor/alloc", "transaction/alloc", "radix-engine/alloc", "radix-engine/lru", "radix-engine-stores/alloc", "radix-engine-interface/alloc", "radix-engine-store-interface/alloc", "utils/alloc"]
 
 # Ref: https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
 [lib]
