wip: Partial implementation of message encryption for Curve25519

--- a/simulator/Cargo.toml
+++ b/simulator/Cargo.toml
@@ -14,7 +14,7 @@ radix-engine-stores = { path = "../radix-engine-stores", features = ["rocksdb"] 
 radix-engine-queries = { path = "../radix-engine-queries" }
 radix-engine-constants = { path = "../radix-engine-constants" }
 radix-engine-interface = { path = "../radix-engine-interface" }
-transaction = { path = "../transaction" }
+transaction = { path = "../transaction", default-features = false, features = ["std"] }
 utils = { path = "../utils" }
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = { version = "1.0.81" }
