--- a/radix-engine-tests/tests/blueprints/Cargo.toml
+++ b/radix-engine-tests/tests/blueprints/Cargo.toml
@@ -14,6 +14,7 @@ members = [
     "consensus_manager",
     "execution_trace",
     "external_blueprint_caller",
+    "fake_bucket",
     "fee",
     "fee_reserve_states",
     "kernel",
